# firmware-rtos

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  freertos_hook.c  keyboard_config.h  main.c  tusb_config.h
src/flash/: flash.c  flash.h
src/kbd/: kbd.c  kbd.h
src/leds/: leds.c  leds.h  leds_utils.c  leds_utils.h
src/switch/: switch.c  switch.h
src/tusb/: tud_utils.c  tud_utils.h  usb_descriptors.c
